# git-id-tool

./: .gitignore  README.md  pyproject.toml
src/gitidtool/: __init__.py  check_cmd_result.py  click_echo_color.py  click_echo_wrapper.py  file_system.py  git_config_results.py  git_data.py  git_result.py  git_result_reporter.py  gpg_data.py  gpg_key_entry.py  gpg_key_entry_factory.py  gpg_key_entry_reader.py  remote_config_entry.py  repo_config.py  repo_config_factory.py  repo_config_reader.py  show_cmd_result.py  ssh_config_entry.py  ssh_config_entry_factory.py  ssh_config_reader.py  ssh_data.py  tool_config.py
tests/: cases.py  test_case_generation.py  test_example_with_mocking.py  test_show_cmd.py  test_tool_config.py  test_write_cmd.py
